--- a/sobi-project/src/package.json
+++ b/sobi-project/src/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "src",
+  "name": "sobi-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Sobi Backend API",
+  "main": "src/app.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "test": "jest",
-    "lint": "eslint ."
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "dev": "nodemon app.js",
+  "start": "node app.js",
+  "lint": "eslint .",
+  "test": "echo \"No tests yet\""
+},
   "dependencies": {
-    "dotenv": "^17.0.0",
-    "express": "^5.1.0",
-    "mysql2": "^3.14.1"
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
+    "mysql2": "^3.6.0",
+    "sequelize": "^6.37.1"
   },
   "devDependencies": {
-    "eslint": "^9.30.0",
-    "jest": "^30.0.3",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.0.2"
   }
 }
