--- a/sobi-project/.github/workflows/ci.yml
+++ b/sobi-project/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [main, develop]
+    branches: [develop, main]
   pull_request:
-    branches: [main, develop]
+    branches: [develop, main]
 
 env:
   ACR_NAME: ${{ secrets.ACR_NAME }}
