--- a/sobi-project/Dockerfile
+++ b/sobi-project/Dockerfile
@@ -1,16 +1,11 @@
-# Use official Node.js base image
 FROM node:18
 
-# Create app directory
 WORKDIR /usr/src/app
 
-# Copy package.json and install dependencies
-COPY package*.json ./
-RUN npm install
+COPY src/package*.json ./
+RUN npm ci
 
-# Copy the rest of the app
-COPY . .
+COPY src/ .
 
-# Expose port and start app
 EXPOSE 3000
-CMD [ "node", "index.js" ]
+CMD [ "node", "app.js" ]
