--- a/sobi-project/.github/workflows/ci.yml
+++ b/sobi-project/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI/CD Pipeline - Sobi
 
 on:
   push:
-    branches: [main, develop]
+    branches: [ main, develop ]
   pull_request:
-    branches: [main, develop]
+    branches: [ main ]
   workflow_dispatch:
     inputs:
       environment:
@@ -22,11 +22,15 @@ permissions:
   actions: read
 
 env:
-  ACR_NAME: ${{ secrets.ACR_NAME }}
-  AZURE_WEBAPP_NAME: ${{ secrets.AZURE_WEBAPP_NAME }}
-  RESOURCE_GROUP: ${{ secrets.AZURE_RESOURCE_GROUP }}
+  AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+  ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+  ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+  ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+
 
 jobs:
+  # Security and Code Quality Scanning
   security-scan:
     name: Security & Code Quality Scan
     runs-on: ubuntu-latest
@@ -48,8 +52,15 @@ jobs:
         with:
           sarif_file: 'trivy-results.sarif'
 
-      - name: Run ESLint
-        working-directory: ./src
+      - name: Run ESLint for Frontend
+        working-directory: ./frontend
+        run: |
+          npm ci || npm install
+          npm run lint
+        continue-on-error: true
+
+      - name: Run ESLint for Backend
+        working-directory: ./backend
         run: |
           npm ci || npm install
           npm run lint
@@ -63,7 +74,8 @@ jobs:
           args: --all-projects --severity-threshold=high
         continue-on-error: true
 
-  terraform-security-scan:
+  # Infrastructure Security Scan
+  infrastructure-scan:
     name: Infrastructure Security Scan
     runs-on: ubuntu-latest
     steps:
@@ -73,7 +85,7 @@ jobs:
       - name: Run Checkov for Terraform
         uses: bridgecrewio/checkov-action@master
         with:
-          directory: ./terraform
+          directory: terraform-azure-containerapp/
           framework: terraform
           output_format: sarif
           output_file_path: checkov-results.sarif
@@ -83,57 +95,333 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
-          sarif_file: 'checkov-results.sarif'
+          sarif_file: checkov-results.sarif
 
-  build-test-scan-deploy:
-    name: Build, Test, Scan, and Deploy
-    runs-on: ubuntu-latest
-    needs: [security-scan, terraform-security-scan]
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
         with:
-          node-version: "18"
+          terraform_version: 1.5.0
 
-      - name: Install dependencies
-        run: npm ci
-        working-directory: ./src
-
-      - name: Run tests
-        run: npm test
-        working-directory: ./src
-
-      - name: Dependency vulnerability scan
-        run: npx audit-ci --moderate
-        working-directory: ./src
-
-      - name: Build Docker image
-        run: docker build -t $ACR_NAME.azurecr.io/sobi-backend:latest .
-
-      - name: Container image scan
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: ${{ env.ACR_NAME }}.azurecr.io/sobi-backend:latest
-
-      - name: Login to Azure
+      - name: Azure Login
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Login to ACR
-        run: az acr login --name $ACR_NAME
+      - name: Terraform Format Check
+        run: |
+          cd terraform-azure-containerapp
+          terraform fmt -check -recursive
+        continue-on-error: true
 
-      - name: Push Docker image to ACR
-        run: docker push $ACR_NAME.azurecr.io/sobi-backend:latest
+      - name: Terraform Validate
+        run: |
+          cd terraform-azure-containerapp/environments/staging
+          terraform init
+          terraform validate
 
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v2
+  # Build and Test Applications
+  build-and-test:
+    name: Build and Test Applications
+    runs-on: ubuntu-latest
+    needs: [security-scan]
+    strategy:
+      matrix:
+        app: [frontend, backend]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          app-name: ${{ env.AZURE_WEBAPP_NAME }}
-          images: ${{ env.ACR_NAME }}.azurecr.io/sobi-backend:latest
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: ${{ matrix.app }}/package-lock.json
 
-      - name: Log deployment complete
-        run: echo "Deployment to Azure Web App completed successfully."
+      - name: Install dependencies
+        working-directory: ./${{ matrix.app }}
+        run: |
+          # Try npm ci first, fallback to npm install if lock file is out of sync
+          npm ci || (echo "Lock file out of sync, running npm install..." && npm install)
+
+      - name: Run tests
+        working-directory: ./${{ matrix.app }}
+        run: npm test
+        env:
+          CI: true
+        continue-on-error: true
+
+      - name: Build application
+        working-directory: ./${{ matrix.app }}
+        run: |
+          if [ "${{ matrix.app }}" = "frontend" ]; then
+            REACT_APP_API_URL=https://scholardorm-backend-staging.gentlemeadow-49027184.eastus.azurecontainerapps.io/api npm run build
+          else
+            npm run build || echo "No build script found"
+          fi
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.app }}-build
+          path: ${{ matrix.app }}/build/
+          retention-days: 1
+
+  # Container Image Build and Scan
+  build-images:
+    name: Build and Scan Container Images
+    runs-on: ubuntu-latest
+    needs: [build-and-test, infrastructure-scan]
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || github.event_name == 'workflow_dispatch'
+    strategy:
+      matrix:
+        app: [frontend, backend]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./${{ matrix.app }}
+          file: ./${{ matrix.app }}/Dockerfile
+          push: false
+          load: true
+          tags: ${{ matrix.app }}:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          build-args: |
+            REACT_APP_API_URL=https://scholardorm-backend-staging.gentlemeadow-49027184.eastus.azurecontainerapps.io/api
+
+      - name: Verify Docker image exists
+        run: |
+          echo "Listing Docker images:"
+          docker images
+          echo "Checking for image: ${{ matrix.app }}:${{ github.sha }}"
+          docker inspect ${{ matrix.app }}:${{ github.sha }} || exit 1
+
+      - name: Run Trivy vulnerability scanner on image
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ matrix.app }}:${{ github.sha }}
+          format: 'sarif'
+          output: 'trivy-image-results.sarif'
+        continue-on-error: true
+
+      - name: Upload Trivy image scan results
+        uses: github/codeql-action/upload-sarif@v3
+        if: always() && hashFiles('trivy-image-results.sarif') != ''
+        with:
+          sarif_file: 'trivy-image-results.sarif'
+
+      - name: Save Docker image
+        run: |
+          docker save ${{ matrix.app }}:${{ github.sha }} | gzip > ${{ matrix.app }}-image.tar.gz
+
+      - name: Upload Docker image artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.app }}-image
+          path: ${{ matrix.app }}-image.tar.gz
+          retention-days: 1
+
+  # Deploy to Staging
+  deploy-staging:
+    name: Deploy to Staging
+    runs-on: ubuntu-latest
+    needs: [build-images]
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
+    environment: staging
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.5.0
+
+      - name: Download Docker images
+        uses: actions/download-artifact@v4
+        with:
+          pattern: "*-image"
+          merge-multiple: true
+
+      - name: Load and push images to staging registry
+        run: |
+          # Login to staging ACR
+          az acr login --name ${{ env.REGISTRY_NAME_STAGING }}
+          
+          # Load and tag frontend image
+          docker load < frontend-image.tar.gz
+          docker tag frontend:${{ github.sha }} ${{ env.REGISTRY_NAME_STAGING }}.azurecr.io/scholardorm-frontend:latest
+          docker tag frontend:${{ github.sha }} ${{ env.REGISTRY_NAME_STAGING }}.azurecr.io/scholardorm-frontend:${{ github.sha }}
+          
+          # Load and tag backend image
+          docker load < backend-image.tar.gz
+          docker tag backend:${{ github.sha }} ${{ env.REGISTRY_NAME_STAGING }}.azurecr.io/scholardorm-backend:latest
+          docker tag backend:${{ github.sha }} ${{ env.REGISTRY_NAME_STAGING }}.azurecr.io/scholardorm-backend:${{ github.sha }}
+          
+          # Push images
+          docker push ${{ env.REGISTRY_NAME_STAGING }}.azurecr.io/scholardorm-frontend:latest
+          docker push ${{ env.REGISTRY_NAME_STAGING }}.azurecr.io/scholardorm-frontend:${{ github.sha }}
+          docker push ${{ env.REGISTRY_NAME_STAGING }}.azurecr.io/scholardorm-backend:latest
+          docker push ${{ env.REGISTRY_NAME_STAGING }}.azurecr.io/scholardorm-backend:${{ github.sha }}
+
+      - name: Deploy infrastructure to staging
+        working-directory: terraform-azure-containerapp/environments/staging
+        run: |
+          # Initialize Terraform
+          terraform init
+          
+          # Plan deployment
+          terraform plan -out=staging.tfplan
+          
+          # Apply deployment
+          terraform apply -auto-approve staging.tfplan
+
+      - name: Update container apps in staging
+        run: |
+          # Update backend container app
+          az containerapp update \
+            --name scholardorm-backend-staging \
+            --resource-group ${{ env.RESOURCE_GROUP_STAGING }} \
+            --image ${{ env.REGISTRY_NAME_STAGING }}.azurecr.io/scholardorm-backend:latest
+          
+          # Update frontend container app
+          az containerapp update \
+            --name scholardorm-frontend-staging \
+            --resource-group ${{ env.RESOURCE_GROUP_STAGING }} \
+            --image ${{ env.REGISTRY_NAME_STAGING }}.azurecr.io/scholardorm-frontend:latest
+
+      - name: Run integration tests
+        run: |
+          # Wait for deployments to be ready
+          sleep 60
+          
+          # Basic health checks
+          curl -f https://scholardorm-backend-staging.gentlemeadow-49027184.eastus.azurecontainerapps.io/api/health || exit 1
+          curl -f https://scholardorm-frontend-staging.gentlemeadow-49027184.eastus.azurecontainerapps.io/ || exit 1
+          
+          echo "✅ Staging deployment successful and healthy"
+
+  # Deploy to Production
+  deploy-production:
+    name: Deploy to Production
+    runs-on: ubuntu-latest
+    needs: [deploy-staging]
+    if: github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
+    environment: production
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.5.0
+
+      - name: Download Docker images
+        uses: actions/download-artifact@v4
+        with:
+          pattern: "*-image"
+          merge-multiple: true
+
+      - name: Load and push images to production registry
+        run: |
+          # Login to production ACR
+          az acr login --name ${{ env.REGISTRY_NAME_PRODUCTION }}
+          
+          # Load and tag frontend image
+          docker load < frontend-image.tar.gz
+          docker tag frontend:${{ github.sha }} ${{ env.REGISTRY_NAME_PRODUCTION }}.azurecr.io/scholardorm-frontend:latest
+          docker tag frontend:${{ github.sha }} ${{ env.REGISTRY_NAME_PRODUCTION }}.azurecr.io/scholardorm-frontend:${{ github.sha }}
+          
+          # Load and tag backend image
+          docker load < backend-image.tar.gz
+          docker tag backend:${{ github.sha }} ${{ env.REGISTRY_NAME_PRODUCTION }}.azurecr.io/scholardorm-backend:latest
+          docker tag backend:${{ github.sha }} ${{ env.REGISTRY_NAME_PRODUCTION }}.azurecr.io/scholardorm-backend:${{ github.sha }}
+          
+          # Push images
+          docker push ${{ env.REGISTRY_NAME_PRODUCTION }}.azurecr.io/scholardorm-frontend:latest
+          docker push ${{ env.REGISTRY_NAME_PRODUCTION }}.azurecr.io/scholardorm-frontend:${{ github.sha }}
+          docker push ${{ env.REGISTRY_NAME_PRODUCTION }}.azurecr.io/scholardorm-backend:latest
+          docker push ${{ env.REGISTRY_NAME_PRODUCTION }}.azurecr.io/scholardorm-backend:${{ github.sha }}
+
+      - name: Deploy infrastructure to production
+        working-directory: terraform-azure-containerapp/environments/production
+        run: |
+          # Initialize Terraform
+          terraform init
+          
+          # Plan deployment
+          terraform plan -out=production.tfplan
+          
+          # Apply deployment
+          terraform apply -auto-approve production.tfplan
+
+      - name: Update container apps in production
+        run: |
+          # Update backend container app
+          az containerapp update \
+            --name scholardorm-production \
+            --resource-group ${{ env.RESOURCE_GROUP_PRODUCTION }} \
+            --image ${{ env.REGISTRY_NAME_PRODUCTION }}.azurecr.io/scholardorm-backend:latest
+          
+          # Update frontend container app
+          az containerapp update \
+            --name scholardorm-frontend-production \
+            --resource-group ${{ env.RESOURCE_GROUP_PRODUCTION }} \
+            --image ${{ env.REGISTRY_NAME_PRODUCTION }}.azurecr.io/scholardorm-frontend:latest
+
+      - name: Run production health checks
+        run: |
+          # Wait for deployments to be ready
+          sleep 90
+          
+          # Basic health checks
+          curl -f https://scholardorm-production.gentlemeadow-49027184.eastus.azurecontainerapps.io/api/health || exit 1
+          curl -f https://scholardorm-frontend-production.gentlemeadow-49027184.eastus.azurecontainerapps.io/ || exit 1
+          
+          echo "✅ Production deployment successful and healthy"
+
+  # Notification and Cleanup
+  notify-and-cleanup:
+    name: Notify and Cleanup
+    runs-on: ubuntu-latest
+    needs: [deploy-production]
+    if: always()
+    steps:
+      - name: Notify Teams/Slack (Success)
+        if: needs.deploy-production.result == 'success'
+        run: |
+          echo "✅ Deployment to production completed successfully!"
+          # Add your Teams/Slack webhook notification here
+          # curl -X POST -H 'Content-type: application/json' --data '{"text":"✅ ScholarDorm deployment successful!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+
+      - name: Notify Teams/Slack (Failure)
+        if: needs.deploy-production.result == 'failure'
+        run: |
+          echo "❌ Deployment to production failed!"
+          # Add your Teams/Slack webhook notification here
+          # curl -X POST -H 'Content-type: application/json' --data '{"text":"❌ ScholarDorm deployment failed!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+
+      - name: Cleanup artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: cleanup-marker
+          path: /dev/null
+          retention-days: 1
